corrige <p> y evento del selector1

--- a/punto_2.html
+++ b/punto_2.html
@@ -20,7 +20,7 @@
     </div>
     <div id="validation">
       <button id="Verify">Verificar</button>
-      <p id="info">Llevas <span id="total">0</span> stickers</p>
+      <p id="info">Llevas 0 stickers</p>
     </div>
     <script src="assets/js/main_punto_2.js"></script>
   </body>
